--- a/initializr/index.html
+++ b/initializr/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <meta http-equiv="Content-Security-Policy" content="style-src-attr 'unsafe-inline'; style-src-elem 'nonce-omgdonttellthisanyone'; script-src-attr 'unsafe-inline'; script-src-elem 'nonce-omgdonttellthisanyone'" >
+        <meta http-equiv="Content-Security-Policy" content="script-src 'strict-dynamic' 'nonce-omgdonttellthisanyone'" >
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <style>
             body {
