--- a/initializr/index.html
+++ b/initializr/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <meta http-equiv="Content-Security-Policy" content="script-src 'self' *.bazaarvoice.com uk.cdn-net.com six.cdn-net.com" >
+        <meta http-equiv="Content-Security-Policy" content="script-src 'self' *.bazaarvoice.com uk.cdn-net.com six.cdn-net.com *.googleapis.com" >
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <style>
             body {
@@ -92,20 +92,11 @@
         <p>&copy; Company 2015</p>
       </footer>
     </div> <!-- /container -->        <script nonce="omgdonttellthisanyone" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script nonce="omgdonttellthisanyone" >window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
+        
         <script nonce="omgdonttellthisanyone" src="js/vendor/bootstrap.min.js"></script>
 
         <script nonce="omgdonttellthisanyone" src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script nonce="omgdonttellthisanyone">
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+ 
     </body>
 </html>
