--- a/initializr/index.html
+++ b/initializr/index.html
@@ -55,32 +55,18 @@
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
-    <div id="BVRRSummaryContainer"></div>
-    <div id="BVRRContainer"></div>
-    <script nonce="omgdonttellthisanyone">
-      $BV.ui( 'rr', 'show_reviews', {
-        doShowContent : function () { 
-          // If the container is hidden (such as behind a tab), put code here to make it visible 
-          //(open the tab).
-        }
-      });
-    </script>
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
         <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <div  id="BVRRSummaryContainer"></div>
       </div>
     </div>
 
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        <div class="col-md-4" id="BVRRContainer">
         </div>
         <div class="col-md-4">
           <h2>Heading</h2>
@@ -105,6 +91,13 @@
 
         <script nonce="omgdonttellthisanyone" src="js/main.js"></script>
 
- 
+     <script nonce="omgdonttellthisanyone">
+      $BV.ui( 'rr', 'show_reviews', {
+        doShowContent : function () { 
+          // If the container is hidden (such as behind a tab), put code here to make it visible 
+          //(open the tab).
+        }
+      });
+    </script>
     </body>
 </html>
