--- a/containerPage.html
+++ b/containerPage.html
@@ -5,7 +5,7 @@
     <title>Test Container Page</title>
     <meta name="robots" content="noindex, nofollow">
     <link rel="canonical" href="containerPage.html"/>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' *.bazaarvoice.com uk.cdn-net.com six.cdn-net.com mpsnare.iesnare.com script-src 'strict-dynamic' 'nonce-omgdonttellthisanyone' 'unsafe-eval'">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' *.bazaarvoice.com uk.cdn-net.com six.cdn-net.com mpsnare.iesnare.com; script-src 'strict-dynamic' 'nonce-omgdonttellthisanyone' 'unsafe-eval'">
   </head>
   <body>
     <script type="text/javascript" src="https://display.ugc.bazaarvoice.com/static/Agileville/obodrov/en_US/bvapi.js"></script>
