--- a/containerPage.html
+++ b/containerPage.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' *.bazaarvoice.com uk.cdn-net.com six.cdn-net.com mpsnare.iesnare.com; script-src 'strict-dynamic' 'nonce-omgdonttellthisanyone' 'unsafe-eval'">
   </head>
   <body>
-    <script type="text/javascript" src="https://display.ugc.bazaarvoice.com/static/Agileville/obodrov/en_US/bvapi.js"></script>
+    <script type="text/javascript" nonce="omgdonttellthisanyone" src="https://display.ugc.bazaarvoice.com/static/Agileville/obodrov/en_US/bvapi.js"></script>
     <script nonce="omgdonttellthisanyone">
       $BV.container('global', {} );
     </script>
