--- a/containerPage.html
+++ b/containerPage.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>Test Container Page</title>
-    <meta name="robots" content="noindex, nofollow">
-    <link rel="canonical" href="containerPage.html"/>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'strict-dynamic' 'nonce-omgdonttellthisanyone' 'unsafe-eval' *.bazaarvoice.com uk.cdn-net.com six.cdn-net.com mpsnare.iesnare.com">
+    <meta name="robots" content="noindex, nofollow" />
+    <link rel="canonical" href="containerPage.html" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'strict-dynamic' 'nonce-omgdonttellthisanyone' 'unsafe-inline' *.bazaarvoice.com uk.cdn-net.com six.cdn-net.com mpsnare.iesnare.com; object-src 'none'; base-uri 'self'"
+    />
   </head>
   <body>
-    <script type="text/javascript" nonce="omgdonttellthisanyone" src="https://display.ugc.bazaarvoice.com/static/Agileville/obodrov/en_US/bvapi.js"></script>
+    <script
+      type="text/javascript"
+      nonce="omgdonttellthisanyone"
+      src="https://display.ugc.bazaarvoice.com/static/Agileville/obodrov/en_US/bvapi.js"
+    ></script>
     <script nonce="omgdonttellthisanyone">
-      $BV.container('global', {} );
+      $BV.container('global', {});
     </script>
   </body>
 </html>
